# skippy

./: LICENSE  README.md  pyproject.toml
src/config/: config.json
src/skippy/: analyzer.py  const.py  utils.py
tests/: test_utils.py
